<resources>
    <string name="app_name">AV1</string>
    <string name="create">Create</string>
    <string name="read">Read</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="nameList">NAME</string>
    <string name="idList">ID</string>
    <string name="ageList">AGE</string>
    <string name="buttonDelete">delete</string>
    <string name="enter_id">Enter ID</string>
    <string name="crud_av1">CRUD AV1</string>
    <string name="enter_idUP">Enter ID</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="updateUP">Update</string>
    <string name="backUP">Back</string>

</resources>